--- a/Flask/templates/index.html
+++ b/Flask/templates/index.html
@@ -1,5 +1,16 @@
 {% extends "base.html" %} {% block content %}
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">      
+</head>
+
 <h2>Landmark Classifier</h2>
 
 <div>
@@ -21,10 +32,12 @@
     </div>
 
     <div class="loader" style="display:none;"></div>
+    <!-- <div class="result" id="result"></div> -->
+        <!-- <h3 id="result">
+        </h3> -->
 
-    <h3 id="result">
-        <span> </span>
-    </h3>
+        <span class="result" ></span>
+
 
 </div>
 
