--- a/Flask/templates/mobilenet.html
+++ b/Flask/templates/mobilenet.html
@@ -15,16 +15,16 @@
             <div id="imagePreview">
             </div>
         </div>
-        <div>
+        <div class="buttons">
             <button type="button" class="btn btn-primary btn-lg " id="btn-predict">Predict!</button>
         </div>
     </div>
 
     <div class="loader" style="display:none;"></div>
 
-    <h3 id="result">
-        <span> </span>
-    </h3>
+      <div class="result" id="result"></div>
+      <!-- <span class="result" ></span> -->
+
 
 </div>
 
