--- a/Flask/templates/select.html
+++ b/Flask/templates/select.html
@@ -1,12 +1,21 @@
 {% extends "base.html" %} {% block content %}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">      
+</head>
 
 <h2>Landmark Classifier</h2>
 
-
+    <div class="buttons">
     <button type="button" class="btn btn-primary" onClick="location.href='mobilenet'" >Mobilenet</button>
     <button type="button" class="btn btn-secondary" onClick="location.href='vgg16'" >VGG16</button>
-    <button type="button" class="btn btn-success" onClick="location.href='vgg19'">VGG19</button
-
+    <button type="button" class="btn btn-success" onClick="location.href='vgg19'">VGG19</button</div>
 
 
 {% endblock %}
